# Practical-work24

./: .env  .gitignore  README.md  app.py  pyproject.toml  routes.py
common/: __init__.py  app_settings.py  connection_environ.py  name_environ.py  settings.py
datebase/: __init__.py  base.db  connection.py  model.py  models.py
static/style/: about.css  arts.css  hello.css  сontainers.css
trash/: button.css  font.css  layout.html  сontainers.css
views/: about.html  arts.html  hello.html  layout.html
